--- a/sb-init.org
+++ b/sb-init.org
@@ -756,9 +756,8 @@ Magit is an interface to the version control system [[https://git-scm.com/][Git]
 
 This interesting video, [[https://www.youtube.com/watch?v%3DvQO7F2Q9DwA][Magit Introduction and Demonstration]] illustrates /rebasing/. The author recommends the following key binding
 
-#+BEGIN_SRC elisp :eval never :tangle no
-  (require 'magit)
-  (global-set-key (kbd "C-x g") 'magit-status)a
+#+BEGIN_SRC elisp :eval never :tangle yes
+  (global-set-key (kbd "C-x g") 'magit-status)
 #+END_SRC
 
 See also [[https://www.youtube.com/watch?v=mtliRYQd0j4&feature=youtu.be][Rewrite git history with Emacs, magit and git rebase]]. This [[https://www.reddit.com/r/emacs/comments/3w2yo8/magit_key_commands_changed/][reddit thread]] discusses the recent changes to magit.
