--- a/sb-init.org
+++ b/sb-init.org
@@ -413,6 +413,16 @@ The function [[elisp:(describe-function 'frame-monitor-attributes)][frame-monito
 #+END_SRC
 
 ** Fonts
+:LOGBOOK:
+CLOCK: [2016-12-01 Thu 07:20]--[2016-12-01 Thu 08:00] =>  0:40
+:END:
+
+  - [[http://dev.carrois.com/fira-3-1/][Fira Mono]]
+  - [[http://larsenwork.com/monoid/][Monoid]]
+  - [[http://www.google.com/get/noto/#/][Google Noto Fonts]]
+  - [[http://input.fontbureau.com/][Input]] is a flexible system of fonts designed specifically for code by David Jonathan Ross. It offers both monospaced and proportional fonts, all with a large range of widths, weights, and styles for richer code formatting.
+  - [[http://sourcefoundry.org/hack/][Hack]] : police pour la programmation
+  - [[https://www.google.com/fonts/specimen/Cousine][Cousine]] was designed by Steve Matteson as an innovative, refreshing sans serif design that is metrically compatible with Courier New™. Cousine offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms.
 
 To select the font under windows, run the following command
 
