--- a/sb-init.org
+++ b/sb-init.org
@@ -1316,7 +1316,6 @@ See also
 
   - [[https://github.com/leoliu/ggtags][Emacs frontend to GNU Global source code tagging system]]
 
-
 ** RSS
 :LOGBOOK:
 CLOCK: [2016-03-29 Tue 11:55]--[2016-03-29 Tue 13:55] =>  2:00
@@ -1392,6 +1391,10 @@ We first define a hydra to insert various types of arrows.
 ** undo-tree
 
   - [[https://www.emacswiki.org/emacs/UndoTree][EmacsWiki: Undo Tree]]
+
+** expand-region
+
+[[https://github.com/magnars/expand-region.el][expand-region]]
 
 * Blog-related customizations
   :LOGBOOK:
