--- a/sb-init.org
+++ b/sb-init.org
@@ -424,6 +424,7 @@ CLOCK: [2016-12-01 Thu 07:20]--[2016-12-01 Thu 08:00] =>  0:40
   - [[http://input.fontbureau.com/][Input]] is a flexible system of fonts designed specifically for code by David Jonathan Ross. It offers both monospaced and proportional fonts, all with a large range of widths, weights, and styles for richer code formatting.
   - [[http://sourcefoundry.org/hack/][Hack]] : police pour la programmation
   - [[https://www.google.com/fonts/specimen/Cousine][Cousine]] was designed by Steve Matteson as an innovative, refreshing sans serif design that is metrically compatible with Courier New™. Cousine offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms.
+  - [[https://github.com/adobe-fonts/source-code-pro][Source Code Pro]] is a set of OpenType fonts that have been designed to work well in user interface (UI) environments. In addition to a functional OpenType font, this open source project provides all of the source files that were used to build this OpenType font by using the AFDKO makeotf tool.
 
 To select the font under windows, run the following command
 
