Updated ob-ipython configuration.

--- a/sb-init.org
+++ b/sb-init.org
@@ -719,19 +719,20 @@ I intended to develop a dynamic block that would automatically insert (and updat
 #+END_SRC
 
 ** ob-ipython
-   :LOGBOOK:
-   CLOCK: [2016-08-31 Wed 05:50]--[2016-08-31 Wed 06:05] =>  0:15
-   CLOCK: [2015-12-01 Tue 08:20]--[2015-12-01 Tue 08:45] =>  0:25
-   CLOCK: [2015-11-24 Tue 07:45]--[2015-11-24 Tue 09:00] =>  1:15
-   CLOCK: [2015-11-05 Thu 07:15]--[2015-11-05 Thu 08:15] =>  1:00
-   CLOCK: [2015-11-03 Tue 08:00]--[2015-11-03 Tue 08:30] =>  0:30
-   :END:
+:LOGBOOK:
+CLOCK: [2017-02-11 Sat 05:30]--[2017-02-11 Sat 06:35] =>  1:05
+CLOCK: [2016-08-31 Wed 05:50]--[2016-08-31 Wed 06:05] =>  0:15
+CLOCK: [2015-12-01 Tue 08:20]--[2015-12-01 Tue 08:45] =>  0:25
+CLOCK: [2015-11-24 Tue 07:45]--[2015-11-24 Tue 09:00] =>  1:15
+CLOCK: [2015-11-05 Thu 07:15]--[2015-11-05 Thu 08:15] =>  1:00
+CLOCK: [2015-11-03 Tue 08:00]--[2015-11-03 Tue 08:30] =>  0:30
+:END:
 
 [[https://github.com/gregsexton/ob-ipython][ob-ipython]] provides org-babel integration with Jupyter for evaluation of (Python by default) code blocks.
 
 The following commands invoke ob-ipython with a specific profile.
 
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
   (require 'ob-ipython)
   (setq ob-ipython-kernel-extra-args (quote ("--profile=ob-ipython")))
 #+END_SRC
@@ -755,6 +756,8 @@ The config file is then located in =~/.ipython/profile_ob-ipython/ipython_config
   c.TerminalIPythonApp.display_banner = False
 #+END_SRC
 
+Note: the above apparently no longer works with Jupyter 4.0 (see [[jupyter.readthedocs.io/en/latest/projects/config.html][Jupyter’s Common Configuration Approach]]). I give up alltogether this configuration.
+
 A zenburn stylesheet was also created for Matplotlib. File =~/.matplotlib/stylelib/zenburn.mplstyle= is reproduced below
 
 #+BEGIN_EXAMPLE
@@ -762,9 +765,11 @@ text.color : dcdccc
 axes.facecolor : 3f3f3f
 axes.edgecolor : dcdccc
 axes.labelcolor : dcdccc
-axes.color_cycle : 8cd0d3,7f9f7f,cc9393,93e0e3,dc8cc3,f0dfaf, dcdccc
+axes.prop_cycle : cycler('color', ['8cd0d3', '7f9f7f', 'cc9393', '93e0e3', 'dc8cc3', 'f0dfaf', 'dcdccc'])
 xtick.color : dcdccc
 ytick.color : dcdccc
+figure.facecolor : 3f3f3f
+savefig.facecolor : 3f3f3f
 #+END_EXAMPLE
 
 * Magit
