--- a/sb-init.org
+++ b/sb-init.org
@@ -277,6 +277,7 @@ Some interesting references
 
   - [[http://irreal.org/blog/?p%3D5309][Defining a Keymap Prefix (Ireal)]]
   - [[http://pragmaticemacs.com/emacs/cycle-spacing/][Cycle spacing]] at Pragmatic Emacs
+  - See function move-to-window-line-top-bottom, bound to =M-r=
 
 ** Default directory
    :LOGBOOK:
