--- a/sb-init.org
+++ b/sb-init.org
@@ -908,24 +908,24 @@ However, the above snippet does not work =:'(=. I will keep it for further refer
 
 This requires the =ido-ubiquitous= package. I will start using this functionality and see if I am happy with it. What would be nice in particular is that magit suggests to add a repository to =magit-repository-directories= if it is not already present in this list.
 
-** A_FAIRE Insert default commit messages
+** FAIT Insert default commit messages
 :LOGBOOK:
 CLOCK: [2017-05-16 Tue 08:15]--[2017-05-16 Tue 08:45] =>  0:30
 :END:
 
 My notes are version controlled. However, I find it difficult to
 enclose a meaningful commit message on each commit. So I end up using
-a standard message recording the date and time. This ought to be
-automated (hooks?).
+a standard message recording the date and time. The following function
+makes the whole process automatic. It is bound to =C-& C=.
 
 #+BEGIN_SRC emacs-lisp
-  (defun sb-magit-stage-all-and-commit ()
+  (defun sb-magit-stage-and-commit-all ()
     (interactive)
     (magit-shell-command (concat "git commit -a -m \""
                                  (format-time-string "%d/%m/%Y %H:%M")
                                  "\"")))
 
-  (define-key sb-map (kbd "C") 'sb-magit-stage-all-and-commit)
+  (define-key sb-map (kbd "C") 'sb-magit-stage-and-commit-all)
 #+END_SRC
 
 * AUCTeX and RefTeX
