Reference to eyebrowse

--- a/sb-init.org
+++ b/sb-init.org
@@ -1404,6 +1404,14 @@ credentials, in particular creation/insertion of passwords.
   - [[https://github.com/emacs-tw/awesome-emacs][Awesome Emacs]]
   - [[http://emacsthemes.com/][Emacs Themes]]
 
+** eyebrowse
+
+[[https://github.com/wasamasa/eyebrowse][eyebrowse]] is a global minor mode for Emacs that allows you to manage
+your window configurations in a simple manner, just like tiling window
+managers like i3wm with their workspaces do. It displays their current
+state in the modeline by default. The behaviour is modeled after
+ranger, a file manager written in Python.
+
 ** IMenu
 
 See also
